--- a/src/multichannel_messaging/localization/es.json
+++ b/src/multichannel_messaging/localization/es.json
@@ -6,9 +6,9 @@
   "confirm_sending": "Confirmar Envío",
   "content": "Contenido:",
   "create_draft": "Crear Borrador",
-  "default_template_content": "Estimado {name},\n\nGracias por su interés en nuestros servicios. ¡Estamos emocionados de tener a {company} en nuestra comunidad!\n\nNos pondremos en contacto pronto con más información sobre cómo podemos ayudar a crecer su negocio.\n\nSaludos cordiales,\nEl Equipo",
-  "default_template_subject": "¡Bienvenido a nuestros servicios, {name}!",
-  "default_template_whatsapp": "¡Hola {name}! 👋\n\n¡Gracias por su interés en nuestros servicios. Estamos emocionados de tener a {company} en nuestra comunidad!\n\nNos pondremos en contacto pronto con más información.\n\n¡Saludos cordiales! 🚀",
+  "default_template_content": "Estimado/a {name},\n\nGracias por su interés en nuestros servicios. ¡Estamos emocionados de tener a {company} como parte de nuestra comunidad!\n\nNos pondremos en contacto pronto con más información sobre cómo podemos ayudar a que su negocio crezca.\n\nAtentamente,\nEl Equipo",
+  "default_template_subject": "¡Bienvenido/a a nuestro servicio, {name}!",
+  "default_template_whatsapp": "¡Hola {name}! 👋\n\n¡Gracias por su interés en nuestros servicios. Estamos emocionados de tener a {company} como parte de nuestra comunidad!\n\nNos pondremos en contacto pronto con más información.\n\n¡Atentamente! 🚀",
   "email_content": "Contenido del Email",
   "email_not_ready": "Email: No listo",
   "email_only": "Solo Email",
@@ -19,6 +19,7 @@
   "language": "Idioma",
   "menu_file": "Archivo",
   "menu_help": "Ayuda",
+  "menu_templates": "Plantillas",
   "menu_tools": "Herramientas",
   "message_template": "Plantilla de Mensaje",
   "no": "No",
@@ -52,5 +53,118 @@
   "whatsapp_web_not_configured": "WhatsApp Web: No configurado",
   "whatsapp_web_ready": "WhatsApp Web: Listo",
   "whatsapp_web_settings": "Configuraciones WhatsApp Web...",
-  "yes": "Sí"
+  "yes": "Sí",
+
+  "_comment_template_management": "=== TRADUCCIONES DE GESTIÓN DE PLANTILLAS ===",
+  
+  "template_library": "Biblioteca de Plantillas",
+  "template_library_title": "Biblioteca de Plantillas",
+  "template_library_menu": "Biblioteca de Plantillas...",
+  "library": "Biblioteca",
+  "new_template": "Nueva Plantilla",
+  "new_template_menu": "Nueva Plantilla...",
+  "save_template": "Guardar Plantilla",
+  "save_current_template": "Guardar Plantilla Actual",
+  "import_template": "Importar Plantilla",
+  "import_template_menu": "Importar Plantilla...",
+  "export_template": "Exportar Plantilla",
+  "export_all_templates": "Exportar Todas las Plantillas",
+  "export_all_templates_menu": "Exportar Todas las Plantillas...",
+  
+  "template_information": "Información de la Plantilla",
+  "template_name": "Nombre:",
+  "template_category": "Categoría:",
+  "template_description": "Descripción:",
+  "template_details": "Detalles de la Plantilla",
+  "supported_channels": "Canales Soportados",
+  "template_channels": "Canales:",
+  "template_language": "Idioma:",
+  "template_variables": "Variables:",
+  "template_created": "Creado:",
+  "template_updated": "Actualizado:",
+  "template_usage_count": "Conteo de Uso:",
+  
+  "category": "Categoría",
+  "categories": "Categorías",
+  "all_categories": "Todas las Categorías",
+  "category_welcome": "Mensajes de Bienvenida",
+  "category_follow_up": "Seguimiento",
+  "category_promotional": "Promocional",
+  "category_support": "Soporte",
+  "category_general": "General",
+  
+  "search_templates": "Buscar plantillas...",
+  "filter_by_category": "Filtrar por categoría",
+  "no_templates_available": "No hay plantillas disponibles",
+  "select_template_to_view": "Seleccione una plantilla para ver detalles",
+  
+  "template_preview": "Vista Previa",
+  "preview_channel": "Canal:",
+  "preview_email": "Email",
+  "preview_whatsapp": "WhatsApp",
+  "preview_error": "Error en vista previa: {error}",
+  "variables_none": "Variables: Ninguna",
+  "variables_list": "Variables: {variables}",
+  
+  "edit_template": "Editar Plantilla",
+  "edit_template_title": "Editar Plantilla",
+  "new_template_title": "Nueva Plantilla",
+  "duplicate_template": "Duplicar Plantilla",
+  "delete_template": "Eliminar Plantilla",
+  "use_template": "Usar Plantilla",
+  
+  "template_name_placeholder": "Ingrese el nombre de la plantilla...",
+  "template_description_placeholder": "Descripción opcional...",
+  "email_subject_placeholder": "Asunto del email...",
+  "email_content_placeholder": "Contenido del email...\n\nUse {name}, {company}, etc. para variables",
+  "whatsapp_content_placeholder": "Mensaje de WhatsApp...\n\nUse {name}, {company}, etc. para variables",
+  
+  "channel_email": "Email",
+  "channel_whatsapp": "WhatsApp",
+  "whatsapp_char_limit": "{count} caracteres",
+  "whatsapp_char_warning": "Acercándose al límite de caracteres",
+  "whatsapp_char_exceeded": "Límite de caracteres excedido",
+  
+  "validation_error": "Error de Validación",
+  "template_name_required": "El nombre de la plantilla es obligatorio.",
+  "channel_required": "Debe seleccionar al menos un canal.",
+  "email_subject_required": "El asunto del email es obligatorio.",
+  "email_content_required": "El contenido del email es obligatorio.",
+  "whatsapp_content_required": "El contenido de WhatsApp es obligatorio.",
+  
+  "template_saved_success": "Plantilla '{name}' guardada exitosamente.",
+  "template_save_failed": "Error al guardar la plantilla.",
+  "template_imported_success": "Plantilla '{name}' importada exitosamente.",
+  "template_import_failed": "Error al importar la plantilla.",
+  "template_exported_success": "Plantilla exportada a {path}",
+  "template_export_failed": "Error al exportar la plantilla.",
+  "templates_exported_success": "Todas las plantillas exportadas a {path}",
+  "templates_export_failed": "Error al exportar las plantillas.",
+  "template_deleted_success": "Plantilla eliminada exitosamente",
+  "template_delete_failed": "Error al eliminar la plantilla",
+  "template_duplicated_success": "Plantilla duplicada como '{name}'",
+  "template_duplicate_failed": "Error al duplicar la plantilla",
+  
+  "confirm_delete_template": "¿Está seguro de que desea eliminar la plantilla '{name}'?\n\nEsta acción no se puede deshacer.",
+  "duplicate_template_name": "Ingrese el nombre para la copia de '{name}':",
+  "duplicate_template_default_name": "{name} (Copia)",
+  
+  "no_template_loaded": "No hay ninguna plantilla cargada para guardar.",
+  "template_management_error": "Error en la gestión de plantillas: {error}",
+  
+  "template_statistics": "Estadísticas de Plantillas",
+  "total_templates": "Total de Plantillas: {count}",
+  "total_categories": "Total de Categorías: {count}",
+  "most_used_templates": "Plantillas Más Usadas",
+  "templates_by_category": "Plantillas por Categoría",
+  
+  "file_json": "Archivos JSON (*.json)",
+  "export_template_filename": "{name}_plantilla.json",
+  "export_all_filename": "todas_plantillas_{date}.json",
+  
+  "template_context_menu": "Operaciones de Plantilla",
+  "context_edit": "Editar Plantilla",
+  "context_duplicate": "Duplicar Plantilla",
+  "context_export": "Exportar Plantilla",
+  "context_delete": "Eliminar Plantilla"
 }
