--- a/src/multichannel_messaging/localization/pt.json
+++ b/src/multichannel_messaging/localization/pt.json
@@ -19,6 +19,7 @@
   "language": "Idioma",
   "menu_file": "Arquivo",
   "menu_help": "Ajuda",
+  "menu_templates": "Modelos",
   "menu_tools": "Ferramentas",
   "message_template": "Modelo de Mensagem",
   "no": "Não",
@@ -52,5 +53,118 @@
   "whatsapp_web_not_configured": "WhatsApp Web: Não configurado",
   "whatsapp_web_ready": "WhatsApp Web: Pronto",
   "whatsapp_web_settings": "Configurações WhatsApp Web...",
-  "yes": "Sim"
+  "yes": "Sim",
+
+  "_comment_template_management": "=== TRADUÇÕES DE GERENCIAMENTO DE MODELOS ===",
+  
+  "template_library": "Biblioteca de Modelos",
+  "template_library_title": "Biblioteca de Modelos",
+  "template_library_menu": "Biblioteca de Modelos...",
+  "library": "Biblioteca",
+  "new_template": "Novo Modelo",
+  "new_template_menu": "Novo Modelo...",
+  "save_template": "Salvar Modelo",
+  "save_current_template": "Salvar Modelo Atual",
+  "import_template": "Importar Modelo",
+  "import_template_menu": "Importar Modelo...",
+  "export_template": "Exportar Modelo",
+  "export_all_templates": "Exportar Todos os Modelos",
+  "export_all_templates_menu": "Exportar Todos os Modelos...",
+  
+  "template_information": "Informações do Modelo",
+  "template_name": "Nome:",
+  "template_category": "Categoria:",
+  "template_description": "Descrição:",
+  "template_details": "Detalhes do Modelo",
+  "supported_channels": "Canais Suportados",
+  "template_channels": "Canais:",
+  "template_language": "Idioma:",
+  "template_variables": "Variáveis:",
+  "template_created": "Criado:",
+  "template_updated": "Atualizado:",
+  "template_usage_count": "Contagem de Uso:",
+  
+  "category": "Categoria",
+  "categories": "Categorias",
+  "all_categories": "Todas as Categorias",
+  "category_welcome": "Mensagens de Boas-vindas",
+  "category_follow_up": "Acompanhamento",
+  "category_promotional": "Promocional",
+  "category_support": "Suporte",
+  "category_general": "Geral",
+  
+  "search_templates": "Buscar modelos...",
+  "filter_by_category": "Filtrar por categoria",
+  "no_templates_available": "Nenhum modelo disponível",
+  "select_template_to_view": "Selecione um modelo para ver detalhes",
+  
+  "template_preview": "Visualização",
+  "preview_channel": "Canal:",
+  "preview_email": "Email",
+  "preview_whatsapp": "WhatsApp",
+  "preview_error": "Erro na visualização: {error}",
+  "variables_none": "Variáveis: Nenhuma",
+  "variables_list": "Variáveis: {variables}",
+  
+  "edit_template": "Editar Modelo",
+  "edit_template_title": "Editar Modelo",
+  "new_template_title": "Novo Modelo",
+  "duplicate_template": "Duplicar Modelo",
+  "delete_template": "Excluir Modelo",
+  "use_template": "Usar Modelo",
+  
+  "template_name_placeholder": "Digite o nome do modelo...",
+  "template_description_placeholder": "Descrição opcional...",
+  "email_subject_placeholder": "Assunto do email...",
+  "email_content_placeholder": "Conteúdo do email...\n\nUse {name}, {company}, etc. para variáveis",
+  "whatsapp_content_placeholder": "Mensagem do WhatsApp...\n\nUse {name}, {company}, etc. para variáveis",
+  
+  "channel_email": "Email",
+  "channel_whatsapp": "WhatsApp",
+  "whatsapp_char_limit": "{count} caracteres",
+  "whatsapp_char_warning": "Aproximando do limite de caracteres",
+  "whatsapp_char_exceeded": "Limite de caracteres excedido",
+  
+  "validation_error": "Erro de Validação",
+  "template_name_required": "Nome do modelo é obrigatório.",
+  "channel_required": "Pelo menos um canal deve ser selecionado.",
+  "email_subject_required": "Assunto do email é obrigatório.",
+  "email_content_required": "Conteúdo do email é obrigatório.",
+  "whatsapp_content_required": "Conteúdo do WhatsApp é obrigatório.",
+  
+  "template_saved_success": "Modelo '{name}' salvo com sucesso.",
+  "template_save_failed": "Falha ao salvar modelo.",
+  "template_imported_success": "Modelo '{name}' importado com sucesso.",
+  "template_import_failed": "Falha ao importar modelo.",
+  "template_exported_success": "Modelo exportado para {path}",
+  "template_export_failed": "Falha ao exportar modelo.",
+  "templates_exported_success": "Todos os modelos exportados para {path}",
+  "templates_export_failed": "Falha ao exportar modelos.",
+  "template_deleted_success": "Modelo excluído com sucesso",
+  "template_delete_failed": "Falha ao excluir modelo",
+  "template_duplicated_success": "Modelo duplicado como '{name}'",
+  "template_duplicate_failed": "Falha ao duplicar modelo",
+  
+  "confirm_delete_template": "Tem certeza de que deseja excluir o modelo '{name}'?\n\nEsta ação não pode ser desfeita.",
+  "duplicate_template_name": "Digite o nome para a cópia de '{name}':",
+  "duplicate_template_default_name": "{name} (Cópia)",
+  
+  "no_template_loaded": "Nenhum modelo está carregado para salvar.",
+  "template_management_error": "Erro no gerenciamento de modelos: {error}",
+  
+  "template_statistics": "Estatísticas de Modelos",
+  "total_templates": "Total de Modelos: {count}",
+  "total_categories": "Total de Categorias: {count}",
+  "most_used_templates": "Modelos Mais Usados",
+  "templates_by_category": "Modelos por Categoria",
+  
+  "file_json": "Arquivos JSON (*.json)",
+  "export_template_filename": "{name}_modelo.json",
+  "export_all_filename": "todos_modelos_{date}.json",
+  
+  "template_context_menu": "Operações de Modelo",
+  "context_edit": "Editar Modelo",
+  "context_duplicate": "Duplicar Modelo",
+  "context_export": "Exportar Modelo",
+  "context_delete": "Excluir Modelo"
 }
